[package]
name = "g_2_0_0"
version = "0.3.3"
authors = ["FFFluoride"]
edition = "2021"
description = "A library to manipulate arbitrary object in the geometric algebra containing two perpendicular vectors that square to 1. Basically 2d VGA"
documentation = "https://docs.rs/g_2_0_0/latest/g_2_0_0/"
repository = "https://github.com/FFFluoride/g_2_0_0"
license = "GPL-3.0"
keywords = ["math", "maths", "ga", "geometric_algebra", "2d"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.16"
radians = "0.3.1"
